--- a/OnHelp.Api.Receitas.Site/OnHelp.Api.Receitas.Site.csproj
+++ b/OnHelp.Api.Receitas.Site/OnHelp.Api.Receitas.Site.csproj
@@ -174,7 +174,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\SiteReceitasFiap - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\OnHelpApiReceitasSite - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
